--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,6 @@
   height: 90%;
   width: 90%;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  /* justify-content: space-evenly;
+  align-items: center; */
 }
