--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,31 @@
 .App {
   text-align: center;
-  display: flex;
-  background: whitesmoke;
-  height: 100vh;
+  /* display: flex; */
   align-items: center;
   flex-direction: column;
+  position: relative;
 }
 
 .canvas {
-  height: 80%;
-  width: 80%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  margin-top: 50px;
+  position: relative;
+  top: 75px;
+  /* background: whitesmoke; */
+  /* height: 100vh;
+  width: 100%; */
+  padding: 20px;
+  margin: 20px;
 }
 .routes-components {
-  height: 90%;
-  width: 90%;
-  display: flex;
-  /* justify-content: space-evenly;
-  align-items: center; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* width: 90vw; */
+}
+
+@media (min-width: 768px) {
+  .routes-components {
+    /* width: 600px; */
+    /* padding: 20px; */
+    display: flex;
+    justify-content: center;
+  }
 }
