--- a/src/Components/CharacterCreation/CharacterCreation.css
+++ b/src/Components/CharacterCreation/CharacterCreation.css
@@ -1,3 +1,40 @@
-.CharacterCreation {
-  height: 600px;
+.ring {
+  /* background: black; */
+  /* color: white; */
+  border-radius: 50%;
+  border: solid black 2px;
+  height: 100px;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.rings {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.push div {
+  /* justify-content: space-between; */
+  margin: 0 30px;
+  /* background: green; */
+}
+.bottom-ring {
+  /* background: yellow; */
+  position: relative;
+  bottom: 35px;
+}
+.question-container {
+  height: 100px;
+}
+.question-container label {
+  margin: 5px;
+}
+
+.hidden {
+  display: none;
+}
+.next-button {
+  margin: 10px;
 }
