--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -2,7 +2,7 @@
   height: 75px;
   background: white;
   color: Black;
-  /* position: fixed; */
+  position: fixed;
   width: 100%;
   top: 0;
   display: flex;
@@ -10,6 +10,7 @@
   justify-content: space-around;
   /* font-size: 1.5em; */
   box-shadow: 0 0 5px rgb(67, 66, 66);
+  z-index: 10;
 }
 
 .links {
