feat(l5r-character): created a new branch to work on character creation for l5r

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,8 @@
   margin: 20px;
 }
 .routes-components {
-  /* display: flex; */
+  display: flex;
+  /* background: purple; */
   /* justify-content: center; */
   /* width: 90vw; */
 }
