--- a/src/Components/CharacterCreation/CharacterCreation.css
+++ b/src/Components/CharacterCreation/CharacterCreation.css
@@ -3,8 +3,8 @@
   /* color: white; */
   border-radius: 50%;
   border: solid black 2px;
-  height: 100px;
-  width: 100px;
+  height: 80px;
+  width: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,6 +14,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.characterCreationChoices {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background: white;
+  width: 400px;
+}
+.questionSelector {
+  padding: 5px;
 }
 .push div {
   /* justify-content: space-between; */
