--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  justify-content: center;
+  align-items: center;
   /* display: flex; */
   align-items: center;
   flex-direction: column;
@@ -9,17 +11,32 @@
 .canvas {
   position: relative;
   top: 75px;
+  max-width: 1000px;
   /* background: whitesmoke; */
   /* height: 100vh;
   width: 100%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 20px;
-  margin: 20px;
+  margin: auto;
 }
 .routes-components {
   display: flex;
-  /* background: purple; */
-  /* justify-content: center; */
-  /* width: 90vw; */
+  top: 75px;
+  justify-content: center;
+}
+
+.component-container {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.L5R-routes {
+  width: 80%;
+  text-align: left;
 }
 
 @media (min-width: 768px) {
